2003-11-17  Joe English  <jenglish@users.sourceforge.net>
	* htmlparse.man: added SEE ALSO link to struct::tree

2003-10-24  Andreas Kupries  <andreask@activestate.com>

	* htmlparse.tcl: Applied [Patch 823346] by Michael Schlenker
	  <mic42@users.sourceforge.net>. Cleans the code up a bit, using
	  faster string ops in place of regexes and -subs, where possible.

2003-10-21  Andreas Kupries  <andreask@activestate.com>

	* htmlparse.man: Extended documentation of command '2tree' with
	  description of how the found tags and text is stored in the
	  nodes of the tree [Bug 827645].

2003-08-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl:
	* htmlparse.test:
	* htmlparse.man:
	* htmlparse.tcl: Updated to use struct v2 when handling trees
	  (Different way of accessing attributes). Bumped version number
	  up to the next major version (1.0) for this incompatible change.

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* htmlparse.tcl:
	* htmlparse.man:
	* pkgIndex.tcl:  Set version of the package to to 0.3.1.

2003-03-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.test: Added htmlparse-3.4 to exercise the fix.
	* htmlparse.tcl (::htmlparse::parse): Fixed bug #640932, reported
	  by Scott Goodwin <scottg@users.sourceforge.net>. Cause of the
	  bug: Incomplete tags were correctly detected and stored for the
	  next call, but incorrectly not used in said next call.

2003-02-24  David N. Welton  <davidw@dedasys.com>

	* htmlparse.tcl (::htmlparse::PrepareHtml): Use string map instead
	of regsub.

2003-02-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* htmlparse.tcl (::htmlparse::mapEscapes): Fixed typo (strimg ->
	string) to pass test suite.

2003-02-05  David N. Welton  <davidw@dedasys.com>

	* htmlparse.tcl (::htmlparse::mapEscapes): Use string match