@@ -378,7 +378,7 @@ proc ::htmlparse::PrepareHtml {html} {
     # Protect characters special to tcl (braces, slashes) by
     # converting them to their escape sequences.
 
-    return [string map [list "\{" "&ob;" "\}" "&cb;" "\\\\" "&bsl;"] $html]
+    return [string map [list "\{" "&ob;" "\}" "&cb;" "\\" "&bsl;"] $html]
 }
 
 
