@@ -7,7 +7,7 @@
 # Copyright (c) 2001 by ActiveState Tool Corp.
 # All rights reserved.
 #
-# RCS: @(#) $Id: htmlparse.test,v 1.3 2003/08/15 03:51:30 andreas_kupries Exp $
+# RCS: @(#) $Id: htmlparse.test,v 1.4 2003/12/16 21:24:34 jenglish Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -251,6 +251,17 @@ test htmlparse-5.2 {conversion to tree} {
     t destroy
     set tx
 } {{0 root} {1 head} {2 title} {3 PCDATA} {1 body} {2 h2} {3 PCDATA} {3 p} {4 PCDATA} {3 p}}
+
+# Bug #861277
+test htmlparse-6.1 {Backslashes in content} {
+    set tags [list]
+    htmlparse::parse -cmd cb -vroot html "<p>\\</p>"
+    set tags
+} [list \
+    [list html  {} {} {}] \
+    [list p     {} {} {&bsl;}] \
+    [list p     /  {} {}] \
+    [list html  /  {} {}] ]
 
 
 # Take a look at the cache.
